2003-09-17  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* client/python/ircam/fts/client/Makefile.am: added missing FtsPipeConnection.py in list of files to install.

	* packages/signal/c/src/osc.c (osc_instantiate): added name support for osc~ object.

2003-09-16  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* configure.in: fixed bug "[ 787862 ] No warning on Linux if jMax is compiled without sound support".
	Added a warning if jMax is compiled without ALSA or Jack support.

2003-09-15  Pierre Alexandre Pages  <Alexandre.Pages@ircam.fr>

	* fts/audio.c, fts/audioconfig.c, fts/object.c : fixed unreferenced variable warning on Windows.
	
2003-09-15  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* apply patches send by Pierre Alexandre Pages.
	
	* fixed dependency problem with parser.h.

2003-08-25  Carl Seleborg  <seleborg@licorne.ircam.fr>

	* fts/fts.c (fts_get_user_directory): Added fts_get_user_directory() as a wrapper
	to (private) get_user_directory().
	* fts/cwppc.c, linux.c, macosx.c : made get_user_directory() extern.
	* include/fts/fts.h : declared the fts_get_user_directory() function - Fixed some typoes in the comments.
	* include/ftsprivate/connection.h : exported fts_connection_set_type() to make VideoDSP happy (dirty!!!)

2003-08-22  Riccardo Borghesi  <borghesi@livorno.ircam.fr>

	*  packages/guiobj/java/ircam/jmax/guiobj/Display>java (messageChanged): 
	fixed bug "[ 783632 ] repaint of generic display in edit mode".

2003-08-08  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* java/src/ircam/jmax/editors/patcher/EditField.java: fixed EditFieldKeyListener that introduced
	a bizarre behaviour on Windows. Apparently, the hack that was implemented in EditFieldKeyListener
	is no longer necessary. The only action that remains is trapping the Enter for non-multiline
	editable objects (number box for instance).

2003-08-07  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fixed the fix ;)
